--- a/src/web/css/home.css
+++ b/src/web/css/home.css
@@ -79,6 +79,11 @@
    background-color: var(--secondary);
    border: 0.32vh solid var(--primary);
    border-radius: 4%;
+   font-size: 2.5vh;
+   font-weight: 700;
+   color: var(--black);
+   text-align: center;
+   padding-top: 7vh;
 }
 
 .classes:hover {
@@ -88,6 +93,12 @@
 
 #addClass {
    position: relative;
+   padding: 0;
+}
+
+#plus {
+   width: 12vw;
+   height: 19vh;
 }
 
 .plusV{
@@ -95,7 +106,7 @@
    background-color: var(--black);
    width: 0.16vw;
    height: 9vh;
-   margin-left: 5.8vw;
+   margin-left: 0vw;
    margin-top: 4.9vh;
 }
 
@@ -106,7 +117,139 @@
    height: 0.3vh;
    position: absolute;
    top: 9.2vh;
-   left: 3.39vw;
+   left: 3.5vw;
    z-index: 1;
 }
 
+.inputs {
+   font-size: 2.5vh;
+   width: 18vw;
+   overflow: hidden;
+   margin-top: 2.5vh;
+   padding: 1vh 1.3vw;
+   border: none;
+   outline: none;
+   border-bottom: 0.15vw solid var(--black);
+   background-color: var(--secondary);
+   color: var(--black);
+}
+
+.popUpTitle {
+   font-size: 4vh;
+   color: var(--black);
+   font-weight: 700;
+   margin-top: 2.3vh;
+   white-space: nowrap;
+}
+
+.button {
+   font-size: 2.5vh;
+   font-weight: 600;
+   width: 8vw;
+   height: 5vh;
+   padding: 0.6vh 1vw;
+   margin-top: 4.6vh;
+   color: var(--black);
+   background-color: var(--white);
+   border: 0.15vw solid var(--primary);
+   border-radius: 6px;
+   outline: none;
+   overflow: hidden;
+   white-space: nowrap;
+}
+
+.button:hover {
+   transform: scale(1.06);
+   cursor: pointer;
+}
+
+#code {
+   display: inline-block;
+   font-size: 2vh;
+   font-weight: 700;
+   margin-top: 3.5vh;
+   border: none;
+   outline: none;
+   background-color: var(--secondary);
+   color: var(--primary);
+}
+
+
+
+/* Animations */
+
+.increaseSize {
+   animation-name: increaseSize;
+   animation-duration: 0.4s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes increaseSize {
+   from {
+      width: 12vw;
+      height: 19vh;
+   }
+ 
+   to {
+      width: 24vw;
+      height: 29vh;
+   }
+}
+
+.decreaseSize {
+   animation-name: decreaseSize;
+   animation-duration: 0.4s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes decreaseSize {
+   from {
+      width: 24vw;
+      height: 29vh;
+   }
+ 
+   to {
+      width: 12vw;
+      height: 19vh;
+   }
+}
+
+.zeroToFull {
+   animation-name: zeroToFull;
+   animation-duration: 0.6s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes zeroToFull {
+   from {
+      width: 0vw;
+      height: 0vh;
+   }
+ 
+   to {
+      width: 23vw;
+      height: 28vh;
+   }
+}
+
+.plusZeroToFull {
+   animation-name: plusZeroToFull;
+   animation-duration: 0.6s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes plusZeroToFull {
+   from {
+      width: 0vw;
+      height: 0vh;
+   }
+ 
+   to {
+      width: 12vw;
+      height: 19vh;
+   }
+}
