--- a/src/web/css/class.css
+++ b/src/web/css/class.css
@@ -115,6 +115,25 @@
    padding-left: 8vw;
 }
 
+.createAssignment {
+   display: inline-block;
+   position: absolute;
+   bottom: 80px;
+   right: 100px;
+   width: 6vw;
+   height: 6vw;
+   padding: 1.8vw 2.1vw;
+   font-size: 1.9vw;
+   background-color: var(--secondary);
+   border: 0.15vw solid var(--primary);
+   border-radius: 100%;
+}
+
+.createAssignment:hover {
+   scale: 1.12;
+}
+
+
 /*Animations*/
 
 .turn90Degreescw {
