--- a/src/web/css/class.css
+++ b/src/web/css/class.css
@@ -115,30 +115,361 @@
    padding-left: 8vw;
 }
 
-.createAssignment {
+.quicks {
    display: inline-block;
    position: absolute;
-   bottom: 80px;
-   right: 100px;
-   width: 6vw;
-   height: 6vw;
-   padding: 1.8vw 2.1vw;
+   bottom: 7vh;
+   right: 3vw;
+   width: 3.5vw;
+   height: 3.5vw;
+   padding-top: 0.4vw;
+   text-align: center;
+   font-size: 2.1vw;
+   background-color: var(--secondary);
+   border: 0.2vw solid var(--primary);
+   border-radius: 100%;
+   z-index: 4;
+}
+
+.quicks:hover {
+   scale: 1.12;
+   cursor: pointer;
+}
+
+.createAssignment {
+   display: none;
+   position: absolute;
+   bottom: 25vh;
+   right: 2.5vw;
+   width: 5vw;
+   height: 5vw;
+   padding: 1.35vw 1.7vw;
    font-size: 1.9vw;
    background-color: var(--secondary);
-   border: 0.15vw solid var(--primary);
+   border: 0.2vw solid var(--primary);
    border-radius: 100%;
+   z-index: 3;
 }
 
 .createAssignment:hover {
-   scale: 1.12;
+   cursor: pointer;
+}
+
+.editClassName {
+   display: none;
+   position: absolute;
+   bottom: 20vh;
+   right: 10vw;
+   width: 7vw;
+   height: 7vw;
+   padding-top: 2.1vw;
+   font-size: 1.2vw;
+   font-weight: bold;
+   text-align: center;
+   background-color: var(--secondary);
+   border: 0.2vw solid var(--primary);
+   border-radius: 100%;
+   overflow: hidden;
+   z-index: 1;
+}
+
+.editClassName:hover {
+   cursor: pointer;
+}
+
+.getCode {
+   display: none;
+   position: absolute;
+   bottom: 3vh;
+   right: 11vw;
+   min-width: 6vw;
+   max-width: 6vw;
+   height: 6vw;
+   padding-top: 1.5vw;
+   font-size: 1.2vw;
+   font-weight: bold;
+   text-align: center;
+   background-color: var(--secondary);
+   border: 0.2vw solid var(--primary);
+   border-radius: 100%;
+   overflow: hidden;
+   z-index: 2;
+}
+
+.getCode:hover {
+   cursor: pointer;
+}
+
+
+.input {
+   font-size: 1.3vw;
+   width: 12vw;
+   padding: 1vh 0.5vw;
+   border: none;
+   outline: none;
+   border-bottom: 0.15vw solid var(--black);
+   background-color: var(--secondary);
+   color: var(--black);
+}
+
+.editButton {
+   font-size: 1.1vw;
+   font-weight: 600;
+   min-width: 10vw;
+   max-width: 15vw;
+   height: 5vh;
+   padding: 0.6vh 0.5vw;
+   margin-top: 3vh;
+   color: var(--black);
+   background-color: var(--white);
+   border: 0.2vw solid var(--primary);
+   border-radius: 6px;
+   outline: none;
+   overflow: hidden;
+   white-space: nowrap;
+}
+
+.editButton:hover {
+   transform: scale(1.06);
+   cursor: pointer;
 }
 
 
 /*Animations*/
 
+.convertToEditForm {
+   animation-name: increaseEditClassSize;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes increaseEditClassSize {
+   from {
+      width: 7vw;
+      height: 7vw;
+      padding-top: 2.1vw;
+      border-radius: 100%;
+   }
+ 
+   to {
+      width: 16vw;
+      height: 20vh;
+      padding-top: 1.5vw;
+      border-radius: 6px;
+   }
+}
+
+.convertToEditButton {
+   animation-name: decreaseEditClassSize;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes decreaseEditClassSize {
+   from {
+      width: 16vw;
+      height: 20vh;
+      padding-top: 1.5vw;
+      border-radius: 6px;
+   }
+ 
+   to {
+      width: 7vw;
+      height: 7vw;
+      padding-top: 2.1vw;
+      border-radius: 100%;
+   }
+}
+
+
+.convertToClassCode {
+   animation-name: increaseClassCodeSize;
+   animation-duration: 0.35s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes increaseClassCodeSize {
+   from {
+      min-width: 6vw;
+      max-width: 6vw;
+      height: 6vw;
+      padding-top: 2.1vw;
+      font-size: 1.2vw;
+      border-radius: 100%;
+      color: var(--black);
+      border: 0.2vw solid var(--primary);
+   }
+ 
+   to {
+      min-width: 14vw;
+      max-width: 40vw;
+      height: 9vh;
+      padding-top: 1.35vw;
+      padding-right: 1vw;
+      color: var(--primary);
+      border: 0.2vw solid var(--black);
+      padding-left: 1vw;
+      font-size: 1.1vw;
+      border-radius: 6px;
+   }
+}
+
+.convertToCodeButton {
+   animation-name: decreaseClassCodeSize;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes decreaseClassCodeSize {
+   from {
+      min-width: 14vw;
+      max-width: 40vw;
+      height: 9vh;
+      padding-top: 1.35vw;
+      padding-right: 1vw;
+      color: var(--primary);
+      border: 0.2vw solid var(--black);
+      padding-left: 1vw;
+      font-size: 1.1vw;
+      border-radius: 6px;
+   }
+ 
+   to {
+      min-width: 6vw;
+      max-width: 6vw;
+      height: 6vw;
+      padding-top: 2.1vw;
+      font-size: 1.2vw;
+      border-radius: 100%;
+      color: var(--black);
+      border: 0.2vw solid var(--primary);
+   }
+}
+
+
+.moveCreateAssButton {
+   animation-name: originToUp;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes originToUp {
+   from {
+      bottom: 7vh;
+      right: 3vw;
+   }
+ 
+   to {
+      bottom: 25vh;
+      right: 2.5vw;
+   }
+}
+
+.moveClassCodeButton {
+   animation-name: originToLeft;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes originToLeft {
+   from {
+      bottom: 7vh;
+      right: 3vw;
+   }
+ 
+   to {
+      bottom: 3vh;
+      right: 11vw;
+   }
+}
+
+.moveEditNameButton {
+   animation-name: originToDiagonal;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes originToDiagonal {
+   from {
+      bottom: 7vh;
+      right: 3vw;
+   }
+ 
+   to {
+      bottom: 20vh;
+      right: 10vw;
+   }
+}
+
+.revertCreateAssButton {
+   animation-name: topToOrigin;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes topToOrigin {
+   from {
+      bottom: 25vh;
+      right: 2.5vw;
+   }
+ 
+   to {
+      bottom: 7vh;
+      right: 3vw;
+   }
+}
+
+.revertClassCodeButton {
+   animation-name: leftToOrigin;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes leftToOrigin {
+   from {
+      bottom: 3vh;
+      right: 11vw;
+   }
+ 
+   to {
+      bottom: 7vh;
+      right: 3vw;
+   }
+}
+
+.revertEditNameButton {
+   animation-name: diagonalToOrigin;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes diagonalToOrigin {
+   from {
+      bottom: 20vh;
+      right: 10vw;
+   }
+ 
+   to {
+      bottom: 7vh;
+      right: 3vw;
+   }
+}
+
+
+
 .turn90Degreescw {
    animation-name: rotate90cw;
-   animation-duration: 0.2s;
+   animation-duration: 0.25s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: both;
 }
@@ -155,7 +486,7 @@
 
 .turn90Degreesacw {
    animation-name: rotate90acw;
-   animation-duration: 0.2s;
+   animation-duration: 0.25s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
 }
@@ -168,36 +499,4 @@
    to {
       transform: rotate(0);
    }
-}
-
-#updateSection {
-   display: none;
-   justify-self: flex-start;
-   font-size: 3vh;
-   font-weight: 600;
-   color: var(--primary);
-   padding-left: 4vw;
-   margin-top: 2vh;
-   width: 20%;
-}
-
-button {
-   font-size: 2.5vh;
-   font-weight: 600;
-   width: 8vw;
-   height: 5vh;
-   padding: 0.6vh 1vw;
-   margin-top: 4.6vh;
-   color: var(--black);
-   background-color: var(--white);
-   border: 0.15vw solid var(--primary);
-   border-radius: 6px;
-   outline: none;
-   overflow: hidden;
-   white-space: nowrap;
-}
-
-button:hover {
-   transform: scale(1.06);
-   cursor: pointer;
 }
