--- a/src/web/css/class.css
+++ b/src/web/css/class.css
@@ -18,7 +18,7 @@
 
 .miscallaneous {
    display: grid;
-   margin-top: 4.2vh;
+   margin-top: 6vh;
    grid-template-columns: 1fr 1fr;
    align-items: flex-end;
 }
@@ -70,9 +70,9 @@
    justify-self: flex-start;
    font-size: 3vh;
    font-weight: 600;
-   color: var(--primary);
+   color: var(--black);
    padding-left: 4vw;
-   margin-top: 2vh;
+   margin-top: 4vh;
 }
 
 .assignedContainer {
@@ -83,16 +83,43 @@
 }
 
 .assignments {
-   justify-self: center;
    width: 85vw;
    height: 6vh;
    background-color: var(--secondary);
    color: var(--black);
    border: 0.32vh solid var(--primary);
+   border-right: 0.16vh solid var(--primary);
    border-radius: 7px;
+   border-bottom-right-radius: 0px;
+   border-top-right-radius: 0px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
+   text-decoration: none;
+}
+
+.editAssignment {
+   display: inline-block;
+   width: 4vw;
+   height: 6vh;
+   padding-top: 1.1vh;
+   text-align: center;
+   font-size: 2.9vh;
+   background-color: var(--secondary);
+   color: var(--black);
+   border: 0.32vh solid var(--primary);
+   border-left: 0.16vh solid var(--primary);
+   border-radius: 7px;
+   border-bottom-left-radius: 0px;
+   border-top-left-radius: 0px;
+   text-decoration: none;
+}
+
+.assignmentContainer {
+   display: grid;
+   grid-template-columns: 15fr 1fr;
+   white-space: nowrap; 
+   justify-self: center;
 }
 
 .assignmentName {
