--- a/src/web/css/class.css
+++ b/src/web/css/class.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+
 
 * {
    margin: 0 0;
@@ -17,14 +21,14 @@
 }
 
 .miscallaneous {
-   display: grid;
+   /* display: grid; */
    margin-top: 6vh;
-   grid-template-columns: 1fr 1fr;
-   align-items: flex-end;
+   /* grid-template-columns: 1fr 1fr;
+   align-items: flex-end; */
 }
 
 .className {
-   justify-self: flex-start;
+   display: inline-block;
    font-size: 4.3vh;
    font-weight: 600;
    color: var(--primary);
@@ -32,18 +36,57 @@
    padding-left: 4vw;
 }
 
-.members {
-   justify-self: flex-end;
-   font-size: 3.5vh;
+.membersContainer {
+   display: inline-block;
+   position: relative;
+   font-size: 4vh;
    color: var(--black);
    background-color: var(--white);
-   padding-right: 4vw;
-   font-weight: 500;
+   margin-left: 1vw;
 }
 
-.members:hover {
-   font-weight: 700;
+.iconContainer {
+   display: inline-block;
+   text-align: center;
+   width: 3vw;
+}
+
+.membersIcon:hover {
+   scale: 1.13;
    cursor: pointer;
+}
+
+.members {
+   display: none;
+   position: absolute;
+   right: 50%;
+   top: 130%;
+   width: 0vw;
+   border: 0.2vw solid var(--primary);
+   border-radius: 4px;
+   background-color: var(--secondary);
+   text-align: center;
+   overflow: hidden;
+   white-space: nowrap;   
+}
+
+.memberId:first-child {
+   margin-top: 0.7vh;
+}
+
+.memberId:last-child {
+   margin-bottom: 2.1vh;
+}
+
+.memberId {
+   width: 9.5vw;
+   text-align: center;
+   font-size: 2.5vh;
+   font-weight: 500;
+   margin: auto;
+   margin-bottom: 0.4vh;
+   padding: 0.7vh;
+   border-bottom: 0.18vw solid var(--primary);
 }
 
 .assigned {
@@ -525,5 +568,43 @@
  
    to {
       transform: rotate(0);
+   }
+}
+
+.displayMembers {
+   animation-name: enlargeMembers;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes enlargeMembers {
+   from {
+      width: 0vw;
+      right: 50%;
+   }
+ 
+   to {
+      width: 12vw;
+      right: -150%;
+   }
+}
+
+.hideMembers {
+   animation-name: hideMembers;
+   animation-duration: 0.25s;
+   animation-timing-function: ease-in-out;
+   animation-fill-mode: both;
+}
+
+@keyframes hideMembers {
+   from {
+      width: 12vw;
+      right: -150%;
+   }
+ 
+   to {
+      width: 0vw;
+      right: 50%;
    }
 }
