--- a/src/web/css/home.css
+++ b/src/web/css/home.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 
 * {
    margin: 0 0;
@@ -39,7 +42,7 @@
    font-size: 4.1vh;
    font-family: 'Fredoka One', cursive;
    margin-left: 2vw; 
-   margin-top: 1.5vh;
+   margin-top: 0.8vh;
    height: 6.45vh;
 }
 
