--- a/src/web/css/auth.css
+++ b/src/web/css/auth.css
@@ -152,6 +152,7 @@
 #thirdPageFields {
    display: inline-block;
    overflow: hidden;
+   white-space: nowrap;
    width: 21vw;
 }
 
@@ -175,6 +176,16 @@
    overflow: hidden;
    white-space: nowrap;
    outline: none;
+}
+
+.eyeIcon {
+   margin-left: -2.4vw;
+   padding: 0.3vh 0.2vw;
+   font-size: 3.2vh;
+}
+
+.eyeIcon:hover {
+   cursor: pointer;
 }
 
 /**Animations**/
