--- a/src/web/css/loadingPage.css
+++ b/src/web/css/loadingPage.css
@@ -20,7 +20,6 @@
 }
 
 body {
-   text-align: center;
    background-color: var(--secondary);
 }
 
@@ -32,7 +31,7 @@ body {
    margin-left: 40.7vw;
 }
 
-.code {
+.loadingCode {
    float: left;
    margin-top: 6vh;
    margin-left: 40.8vw;
