--- a/src/web/css/submission.css
+++ b/src/web/css/submission.css
@@ -78,13 +78,32 @@ textarea {
 }
 
 #complete-button {
-   margin-top: 1%;
-   background-color: #008037;
-   border: none;
-   padding-left: 1%;
-   padding-right: 1%;
-   color: var(--white);
-   font-size: 16px;
+   display: inline-block;
+   background-color: var(--secondary);
+   color: var(--black);
+   border: 0.25vw solid var(--primary);
+   border-radius: 5px;
+   outline: none;
+   padding: 0.6vh 0.5vw;
+   font-size: 2.3vh;
+   font-weight: 700;
    margin-bottom: 5vh;
    margin-left: 4.5vw;
+}
+
+#complete-button:hover {
+   scale: 1.06;
+   cursor: pointer;
+}
+
+#completed-result {
+   display: inline-block;
+   color: var(--black);
+   padding: 1.4vh;
+   padding-left: 1vw;
+   margin-left: 1vw;
+   height: 5.7vh;
+   border-left: 0.2vw solid var(--primary);
+   font-size: 2.5vh;
+   font-weight: 500;
 }
